--- a/media/css/background/lightgray.css
+++ b/media/css/background/lightgray.css
@@ -1,5 +1,5 @@
 /**
-* @version 3.2.4
+* @version 3.2.6
 * @package PWebContact
 * @copyright © 2014 Perfect Web sp. z o.o., All rights reserved. http://www.perfect-web.co
 * @license GNU General Public License http://www.gnu.org/licenses/gpl-3.0.html
@@ -7,7 +7,8 @@
 */
 
 /* Form background */
-.pweb-bg-lightgray .pwebcontact-container {
+.pweb-bg-lightgray .pwebcontact-container,
+.pweb-bg-lightgray.ui-effects-transfer.pweb-genie {
 	background-color: #ddd;
 }
 .pweb-bg-lightgray.pweb-slidebox .pwebcontact-container {
@@ -40,8 +41,28 @@
 	color: #f00;
 }
 
+/* Accordion Box */
+.pweb-bg-lightgray.pwebcontact-box.pweb-accordion.pweb-accordion-boxed .pwebcontact-container {
+ 	-moz-box-shadow: inset 0 0 4px rgba(0,0,0, 0.5);
+	-webkit-box-shadow: inset 0 0 4px rgba(0,0,0, 0.5);
+ 	box-shadow: inset 0 0 4px rgba(0,0,0, 0.5);
+	border-color: #666666;
+	border-color: rgba(0,0,0, 0.5);
+}
+.pweb-bg-lightgray.pwebcontact-box.pweb-accordion.pweb-accordion-boxed.pweb-shadow .pwebcontact-container {
+	-moz-box-shadow: 0 0 4px rgba(0, 0, 0, 0.5), inset 0 0 4px rgba(0,0,0, 0.5);
+	-webkit-box-shadow: 0 0 4px rgba(0, 0, 0, 0.5), inset 0 0 4px rgba(0,0,0, 0.5);
+	box-shadow: 0 0 4px rgba(0, 0, 0, 0.5), inset 0 0 4px rgba(0,0,0, 0.5);
+}
+ /* Accordion Arrow */
+.pweb-bg-lightgray.pwebcontact-box.pweb-accordion.pweb-accordion-boxed .pweb-arrow {
+	border-bottom-color: #666666;
+	border-bottom-color: rgba(0,0,0, 0.6);
+}
+
 /* Lightbox Window */
-.pweb-bg-lightgray.pwebcontact-box.pweb-modal .pwebcontact-container {
+.pweb-bg-lightgray.pwebcontact-box.pweb-modal .pwebcontact-container,
+.pweb-bg-lightgray.ui-effects-transfer.pweb-genie {
 	border: 1px solid #bbb;
 	border-color: rgba(0,0,0,0.2);
 }
