--- a/media/css/form/white.css
+++ b/media/css/form/white.css
@@ -1,7 +1,7 @@
 /**
-* @version 3.1.4
+* @version 3.2.5
 * @package PWebContact
-* @copyright © 2013 Perfect Web sp. z o.o., All rights reserved. http://www.perfect-web.co
+* @copyright © 2014 Perfect Web sp. z o.o., All rights reserved. http://www.perfect-web.co
 * @license GNU General Public License http://www.gnu.org/licenses/gpl-3.0.html
 * @author Piotr Moćko
 */
@@ -19,7 +19,8 @@
 }
 
 /* Links */
-.pweb-form-white form.pwebcontact-form a {
+.pweb-form-white form.pwebcontact-form a,
+.pweb-form-white .pweb-button-close {
     color: #EFEFEF;
 	text-decoration: none;
 	background: none;
