--- a/media/css/layout-rtl.css
+++ b/media/css/layout-rtl.css
@@ -1,7 +1,7 @@
 /**
-* @version 3.1.1
+* @version 3.2.5
 * @package PWebContact
-* @copyright © 2013 Perfect Web sp. z o.o., All rights reserved. http://www.perfect-web.co
+* @copyright © 2014 Perfect Web sp. z o.o., All rights reserved. http://www.perfect-web.co
 * @license GNU General Public License http://www.gnu.org/licenses/gpl-3.0.html
 * @author Piotr Moćko
 */
@@ -21,17 +21,30 @@
 	text-align: right;
 }
 
-/* Lightbox - close button */
-.pweb-rtl .pweb-modal-close {
+.pweb-rtl .pweb-button-close {
 	right: auto;
+	left: 5px;
+}
+/* Lightbox - close button */
+.pweb-rtl.pweb-modal .pweb-button-close {
 	left: -15px;
 }
+
+.pweb-rtl.pweb-accordion.pweb-accordion-boxed .pweb-arrow {
+	left: auto;
+	right: 25%;
+}
+
 
 /* System message */
 .pweb-rtl form.pwebcontact-form .pweb-msg .pweb-progress {
 	padding-left: 0;
 	padding-right: 20px;
 	background-position: right top;
+}
+.pweb-rtl .pweb-accordion form.pwebcontact-form .pweb-msg-before {
+	margin-right: auto;
+	margin-left: 15px;
 }
 
 /* Fields */
