--- a/media/css/admin_wp.css
+++ b/media/css/admin_wp.css
@@ -154,6 +154,18 @@ label .pweb-star,
 }
 
 
+.pweb-load-samples {
+    text-align: center;
+    margin-bottom: 20px;
+}
+.pweb-load-samples label {
+    
+}
+.pweb-load-samples select {
+    
+}
+
+
 .pweb-width-40 {
     width: 39.9%;
     float: left;
@@ -294,6 +306,68 @@ label .pweb-star,
     border-left-color: #DD823B;
 }
 
+
+#pweb_params_handler_button-lbl,
+#pweb_params_handler_tab-lbl,
+#pweb_params_effect_slide_in-lbl,
+#pweb_params_effect_modal_fade-lbl, 
+#pweb_params_effect_modal_drop-lbl, 
+#pweb_params_effect_modal_rotate-lbl, 
+#pweb_params_effect_modal_square-lbl, 
+#pweb_params_effect_modal_smooth-lbl, 
+#pweb_params_effect_slide_down-lbl, 
+#pweb_params_layout_slidebox-lbl, 
+#pweb_params_layout_modal-lbl, 
+#pweb_params_layout_accordion-lbl, 
+#pweb_params_layout_static-lbl {
+    background: left bottom no-repeat;
+    display: inline-block;
+    padding-bottom: 130px;
+    margin-bottom: 20px;
+    min-width: 160px;
+}
+
+#pweb_params_handler_button-lbl {
+    background-image: url(../images/admin/toggler-button.png);
+}
+#pweb_params_handler_tab-lbl {
+    background-image: url(../images/admin/toggler-tab.png);
+}
+
+#pweb_params_effect_slide_in-lbl {
+    background-image: url(../images/admin/slidebox-slide.png);
+}
+#pweb_params_effect_modal_fade-lbl {
+    background-image: url(../images/admin/modal-fade.png);
+}
+#pweb_params_effect_modal_drop-lbl {
+    background-image: url(../images/admin/modal-drop.png);
+}
+#pweb_params_effect_modal_rotate-lbl {
+    background-image: url(../images/admin/modal-rotate.png);
+}
+#pweb_params_effect_modal_square-lbl {
+    background-image: url(../images/admin/modal-scale.png);
+}
+#pweb_params_effect_modal_smooth-lbl {
+    background-image: url(../images/admin/modal-enlarge.png);
+}
+#pweb_params_effect_slide_down-lbl {
+    background-image: url(../images/admin/accordion.png);
+}
+
+#pweb_params_layout_slidebox-lbl {
+    background-image: url(../images/admin/slidebox.png);
+}
+#pweb_params_layout_modal-lbl {
+    background-image: url(../images/admin/modal.png);
+}
+#pweb_params_layout_accordion-lbl {
+    background-image: url(../images/admin/accordion.png);
+}
+#pweb_params_layout_static-lbl {
+    background-image: url(../images/admin/static.png);
+}
 
 
 .pweb-location-options {
@@ -611,10 +685,12 @@ label .pweb-star,
 
 
 .pweb-not-related {
-    color: #aaa;
+    opacity: 0.5;
+    filter: alpha(opacity=0.5);
 }
 .pweb-not-related:hover {
-    color: #444;
+    opacity: 1;
+    filter: alpha(opacity=1);
 }
 
 
@@ -774,48 +850,6 @@ label .pweb-star,
 	cursor: move;
 }
 
-/* jQuery UI Tabs */
-.ui-tabs {
-	position: relative;/* position: relative prevents IE scroll bug (element with position: relative inside container with overflow: auto appear as "fixed") */
-	padding: .2em;
-}
-.ui-tabs .ui-tabs-nav {
-	margin: 0;
-	padding: .2em .2em 0;
-}
-.ui-tabs .ui-tabs-nav li {
-	list-style: none;
-	float: left;
-	position: relative;
-	top: 0;
-	margin: 1px .2em 0 0;
-	border-bottom-width: 0;
-	padding: 0;
-	white-space: nowrap;
-}
-.ui-tabs .ui-tabs-nav .ui-tabs-anchor {
-	float: left;
-	padding: .5em 1em;
-	text-decoration: none;
-}
-.ui-tabs .ui-tabs-nav li.ui-tabs-active {
-	margin-bottom: -1px;
-	padding-bottom: 1px;
-}
-.ui-tabs .ui-tabs-nav li.ui-tabs-active .ui-tabs-anchor,
-.ui-tabs .ui-tabs-nav li.ui-state-disabled .ui-tabs-anchor,
-.ui-tabs .ui-tabs-nav li.ui-tabs-loading .ui-tabs-anchor {
-	cursor: text;
-}
-.ui-tabs-collapsible .ui-tabs-nav li.ui-tabs-active .ui-tabs-anchor {
-	cursor: pointer;
-}
-.ui-tabs .ui-tabs-panel {
-	display: block;
-	border-width: 0;
-	padding: 1em 1.4em;
-	background: none;
-}
 /* jQuery UI Tooltips */
 .ui-tooltip {
 	padding: 8px;
