--- a/media/css/admin.css
+++ b/media/css/admin.css
@@ -140,6 +140,7 @@ fieldset.radio.pwebpositions input, td.paramlist_value.pwebpositions input {
 .pwebposition-static {
 	display: block; 
 	border: 1px solid #aaa;
+    background: #fff;
 	width: 50px; 
 	height: 30px; 
 	position: relative;
