--- a/media/css/admin_wp.css
+++ b/media/css/admin_wp.css
@@ -130,6 +130,8 @@ input.pweb-invalid, textarea.pweb-invalid, select.pweb-invalid, fieldset.pweb-in
     height: 150px;
     padding-top: 0;
     text-align: center;
+    background-repeat: no-repeat;
+    background-position: center center;
 }
 .pweb-panels.theme-browser .theme .theme-screenshot:hover {
     cursor: pointer;
@@ -141,6 +143,19 @@ input.pweb-invalid, textarea.pweb-invalid, select.pweb-invalid, fieldset.pweb-in
     font-size: 150px;
     line-height: 226px;
     height: 226px;
+}
+
+.pweb-panels.theme-browser .theme .theme-screenshot.pweb-layout-slidebox {
+    background-image: url(../images/admin/slidebox-slide.png);
+}
+.pweb-panels.theme-browser .theme .theme-screenshot.pweb-layout-modal {
+    background-image: url(../images/admin/modal.png);
+}
+.pweb-panels.theme-browser .theme .theme-screenshot.pweb-layout-accordion {
+    background-image: url(../images/admin/accordion.png);
+}
+.pweb-panels.theme-browser .theme .theme-screenshot.pweb-layout-static {
+    background-image: url(../images/admin/static.png);
 }
 
 @media only screen and (max-width: 780px) {
@@ -207,6 +222,18 @@ input.pweb-invalid, textarea.pweb-invalid, select.pweb-invalid, fieldset.pweb-in
 }
 .pweb-load-samples select {
     
+}
+
+
+#pweb-layout-preview {
+    text-align: center;
+}
+#pweb-layout-preview img {
+    margin: 0 auto;
+    background: #FFFFFF;
+    padding: 10px;
+    -webkit-box-shadow: 0 1px 20px 5px rgba(0, 0, 0, 0.1);
+    box-shadow: 0 1px 20px 5px rgba(0, 0, 0, 0.1);
 }
 
 
@@ -793,6 +820,7 @@ span.pweb-pro {
     color: #FFFFFF;
     display: inline-block;
     font-weight: bold;
+    font-size: 13px;
     line-height: 18px;
     padding: 0 5px;
     margin-left: 3px;
@@ -809,6 +837,12 @@ span.pweb-free {
     margin-left: 3px;
     text-transform: uppercase;
     cursor: default;
+}
+
+.pweb-panels span.pweb-pro {
+    position: absolute;
+    right: 5px;
+    top: 5px;
 }
 
 
@@ -860,30 +894,35 @@ span.pweb-free {
 }
 
 .pweb-alert {
-  border: 1px solid rgba(0, 0, 0, 0);
-  border-radius: 4px;
-  margin-bottom: 20px;
-  padding: 15px;
+    border: 1px solid rgba(0, 0, 0, 0);
+    border-radius: 4px;
+    margin-bottom: 20px;
+    padding: 15px;
 }
 .pweb-alert-danger {
-  background-color: #F2DEDE;
-  border-color: #EBCCD1;
-  color: #A94442;
+    background-color: #F2DEDE;
+    border-color: #EBCCD1;
+    color: #A94442;
 }
 .pweb-alert-warning {
-  background-color: #FCF8E3;
-  border-color: #FAEBCC;
-  color: #8A6D3B;
+    background-color: #FCF8E3;
+    border-color: #FAEBCC;
+    color: #8A6D3B;
 }
 .pweb-alert-info {
-  background-color: #D9EDF7;
-  border-color: #BCE8F1;
-  color: #31708F;
+    background-color: #D9EDF7;
+    border-color: #BCE8F1;
+    color: #31708F;
 }
 .pweb-alert-success {
-  background-color: #DFF0D8;
-  border-color: #D6E9C6;
-  color: #3C763D;
+    background-color: #DFF0D8;
+    border-color: #D6E9C6;
+    color: #3C763D;
+}
+
+.pweb-alert .button,
+.pweb-alert .button:focus {
+    vertical-align: middle;
 }
 
 /* jQuery UI Tooltips */
@@ -892,9 +931,9 @@ span.pweb-free {
 	position: absolute;
 	z-index: 9999;
 	max-width: 300px;
-    background: #333;
-    background-color: rgba(0,0,0, 0.7);
-    color: #fff;
+    background: #333 !important;
+    background-color: rgba(0,0,0, 0.7) !important;
+    color: #fff !important;
 	-webkit-box-shadow: 0 0 5px #aaa;
 	box-shadow: 0 0 5px #aaa;
 }
